--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -18,6 +18,7 @@ html, body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
+    font-size:0.37rem;
 }
 
 div, span, object, iframe, img, table, caption, thead, tbody,
@@ -77,4 +78,7 @@ input{
 select {
     -webkit-appearance: none;
     background-color: #fff;
+}
+button{
+    font-size: 0.37rem;
 }
