--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,9 +1,10 @@
 $black:#313131;
+$gray:#ddd;
 $white:#fff;
 $red:#ff5a5f;
 $yellow:#feb501;
 $green:#80bd01;
 $blue:#66ccff;
-$gap:5px;
-
-.clearfix{overflow:hidden;_zoom:1;}
+$gap:0.13rem;
+$panel-gap:2*$gap;
+$content-gap:0.7rem;
