--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,10 +1,23 @@
-$black:#313131;
-$gray:#ddd;
-$white:#fff;
-$red:#ff5a5f;
-$yellow:#feb501;
-$green:#80bd01;
-$blue:#66ccff;
-$gap:0.13rem;
-$panel-gap:2*$gap;
-$content-gap:0.7rem;
+@import './function.scss';
+/******中性色********/
+$black:#1f2d32;
+$black-light:#324057;
+$black-light-extra:#475669;
+$sliver:#8492a6;
+$sliver-light:#99a9bf;
+$sliver-light-extra:#c0ccda;
+$gray:#d3dce6;
+$gray-light:#e5e9f2;
+$gray-light-extra:#eff2f7;
+$white:#ffffff;
+$white-dark:#f9fafc;
+/********基础色*********/
+$red:#ff4949;
+$yellow:#f7ba2a;
+$green:#13ce66;
+$blue:#20a0ff;
+/*******基础值*********/
+$base:2/75;
+$gap:pxTorem(5);
+$panel-gap:$gap*2;
+$base-size:pxTorem(14);
