--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,16 +1,3 @@
-/**
- * Global Reset of all HTML Elements
- *
- * Resetting all of our HTML Elements ensures a smoother
- * visual transition between browsers. If you don't believe me,
- * try temporarily commenting out this block of code, then go
- * and look at Mozilla versus Safari, both good browsers with
- * a good implementation of CSS. The thing is, all browser CSS
- * defaults are different and at the end of the day if visual
- * consistency is what we're shooting for, then we need to
- * make sure we're resetting all spacing elements.
- *
- */
 html, body {
     height: 100%;
     border: 0;
@@ -18,7 +5,7 @@ html, body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
-    font-size:0.37rem;
+    font-size:$base-size;
 }
 
 div, span, object, iframe, img, table, caption, thead, tbody,
@@ -77,8 +64,8 @@ input{
 }
 select {
     -webkit-appearance: none;
-    background-color: #fff;
+    background-color: $white;
 }
-button{
-    font-size: 0.37rem;
+button,input{
+    font-size: $base-size;
 }
