--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,4 +1,5 @@
 #app{
+	height:100%;
 	min-height:100%;
 }
 .flex{
@@ -151,6 +152,15 @@
 	border-width: pxTorem(1);
 	border-style: solid;
 	border-radius:pxTorem(5);
+}
+.btn-large{
+	width:pxTorem(165);
+	height:pxTorem(65);
+
+}
+.btn-disable{
+	background:#ddd;
+	border-color: $black;	
 }
 .btn-default{
 	background:$white;
