--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    width: 100%;
     border: 0;
     font-family: 'Microsoft Yahei';
     line-height: 1.5;
@@ -20,7 +21,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cit, code,
 del, dfn, em, ins, q, samp, small, strong, sub, sup, b, i, hr, dl, dt, dd,
 ol, ul, li, fieldset, legend, label {
     border: 0;
-    // font-size: 100%;
+    font-size: 100%;
     vertical-align: baseline;
     margin: 0;
     padding: 0;
@@ -40,7 +41,7 @@ table {
     }
 }
 li{
-    list-style: none;
+    // list-style: none;
 }
 a{
     text-decoration: none;
