刮卡,答题 逻辑重构,入口文件优化

--- a/src/assets/scss/simditor.css
+++ b/src/assets/scss/simditor.css
@@ -742,6 +742,6 @@
   background-color: #ffffee;
 }
 .simditor .simditor-body img, .editor-style img {
-  margin: 0 0.3125em;
+  /*margin: 0 0.3125em;*/
   vertical-align: middle;
 }
