--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -41,9 +41,9 @@ table {
         vertical-align: middle;
     }
 }
-li{
-    // list-style: none;
-}
+/*li{
+    list-style: none;
+}*/
 a{
     text-decoration: none;
 }
