--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,4 @@
+@import './transition.scss';
 @import './variable.scss';
 @import './reset.scss';
 @import './common.scss';
-@import './iconfont.scss';
