--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -55,7 +55,9 @@
 .text-ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 
