--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -4,27 +4,59 @@
 }
 
 .flex {
-    display: flex;
-}
-
-.flex-column {
-    flex-direction: column;
+    display: box;			  /* OLD - Android 4.4- */
+  	display: -webkit-box;	  /* OLD - iOS 6-, Safari 3.1-6 */
+  	display: -moz-box;		 /* OLD - Firefox 19- (buggy but mostly works) */
+  	display: -ms-flexbox;	  /* TWEENER - IE 10 */
+  	display: -webkit-flex;	 /* NEW - Chrome */
+  	display: flex;
 }
 
 .flex-item {
-    flex: 1;
+  -webkit-box-flex: 1;	  /* OLD - iOS 6-, Safari 3.1-6 */
+	-moz-box-flex: 1;		 /* OLD - Firefox 19- */
+	-webkit-flex: 1;		  /* Chrome */
+	-ms-flex: 1;			  /* IE 10 */
+	flex: 1;
+}
+.flex-wrap{
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    -o-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+.flex-column {
+  -webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
 }
 
+
 .flex-center-v {
-    align-items: center;
+	-webkit-align-items: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	-o-align-items: center;
+	align-items: center;
 }
 
 .flex-center-h {
-    justify-content: center;
+	-webkit-justify-content: center;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	-o-justify-content: center;
+	justify-content: center;
 }
 
 .flex-space-between {
-    justify-content: space-between;
+  -webkit-justify-content: space-between;
+	-moz-justify-content: space-between;
+	-ms-justify-content: space-between;
+	-o-justify-content: space-between;
+	justify-content: space-between;
 }
 
 .pull-left {
@@ -263,4 +295,13 @@
     background-color: $white;
     border-color: $pink;
     color: $pink;
+}
+.swiper-pagination-bullet {
+    padding: pxTorem(10);
+    margin: 0 pxTorem(10);
+    border-radius: 50%;
+    background-color: $white !important;
+}
+.swiper-pagination-bullet-active {
+    background-color: $gray-light !important;
 }
