banner修复,物流信息添加

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -9,6 +9,9 @@ html, body {
     padding: 0;
     font-size:$base-size;
 }
+input,textarea{
+    font-family: 'Microsoft Yahei';
+}
 
 div, span, object, iframe, img, table, caption, thead, tbody,
 tfoot, tr, tr, td, article, aside, canvas, details, figure, hgroup, menu,
