--- a/src/assets/scss/transition.scss
+++ b/src/assets/scss/transition.scss
@@ -1,4 +1,4 @@
-.fade-enter-active {
+.fade-enter-active,.fade-leave-active {
     transition: opacity .3s
 }
 
@@ -15,3 +15,4 @@
 .popup-leave-active {
     transform: translateY(100%);
 }
+
