--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -2,63 +2,6 @@
     height: 100%;
     width: 100%;
 }
-
-.flex {
-    display: box;			  /* OLD - Android 4.4- */
-  	display: -webkit-box;	  /* OLD - iOS 6-, Safari 3.1-6 */
-  	display: -moz-box;		 /* OLD - Firefox 19- (buggy but mostly works) */
-  	display: -ms-flexbox;	  /* TWEENER - IE 10 */
-  	display: -webkit-flex;	 /* NEW - Chrome */
-  	display: flex;
-}
-
-.flex-item {
-  -webkit-box-flex: 1;	  /* OLD - iOS 6-, Safari 3.1-6 */
-	-moz-box-flex: 1;		 /* OLD - Firefox 19- */
-	-webkit-flex: 1;		  /* Chrome */
-	-ms-flex: 1;			  /* IE 10 */
-	flex: 1;
-}
-.flex-wrap{
-    -webkit-flex-wrap: wrap;
-    -moz-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    -o-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-.flex-column {
-  -webkit-flex-direction: column;
-	-moz-flex-direction: column;
-	-ms-flex-direction: column;
-	-o-flex-direction: column;
-	flex-direction: column;
-}
-
-
-.flex-center-v {
-	-webkit-align-items: center;
-	-moz-align-items: center;
-	-ms-align-items: center;
-	-o-align-items: center;
-	align-items: center;
-}
-
-.flex-center-h {
-	-webkit-justify-content: center;
-	-moz-justify-content: center;
-	-ms-justify-content: center;
-	-o-justify-content: center;
-	justify-content: center;
-}
-
-.flex-space-between {
-  -webkit-justify-content: space-between;
-	-moz-justify-content: space-between;
-	-ms-justify-content: space-between;
-	-o-justify-content: space-between;
-	justify-content: space-between;
-}
-
 .pull-left {
     float: left;
 }
@@ -90,6 +33,15 @@
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
+}
+ul.list-inline{
+    list-style: none;
+    overflow: hidden;
+    _zoom:1;
+    li{
+        list-style: none;
+        float:left;
+    }
 }
 
 
@@ -242,3 +194,4 @@
     background-color: $gray-light !important;
 
 }
+
