--- a/src/assets/scss/transition.scss
+++ b/src/assets/scss/transition.scss
@@ -1,5 +1,10 @@
-.fade-enter-active,.fade-leave-active {
-    transition: opacity .3s
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity .3s;
+    -ms-transition: opacity .3s;
+    -moz-transition: opacity .3s;
+    -webkit-transition: opacity .3s;
+    -o-transition: opacity .3s;
 }
 
 .fade-enter {
@@ -8,11 +13,16 @@
 
 .popup-enter-active,
 .popup-leave-active {
-    transition: transform .5s
+    transition: transform .5s;
+    -moz-transition: transform .5s;
+    -webkit-transition: transform .5s;
+    -o-transition: transform .5s;
 }
 
 .popup-enter,
 .popup-leave-active {
     transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+    -o-transform: translateY(100%);
 }
-
