--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -128,6 +128,7 @@ ul.list-inline{
 /*******按钮**********/
 
 .btn {
+    padding:0;
     height: pxTorem(50);
     line-height: pxTorem(50);
     border-width: 1px;
