--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -49,9 +49,6 @@ ul.list-inline{
 
 /************颜色********/
 
-.bg-base {
-    background-color: rgb(243, 243, 243);
-}
 
 .bg-white {
     background-color: $white;
@@ -61,26 +58,13 @@ ul.list-inline{
     background-color: $blue;
 }
 
-.bg-gray {
-    background-color: $gray;
-}
-
 .bg-pink {
     background-color: $pink;
-}
-
-.bg-green {
-    background-color: $green;
 }
 
 .bg-yellow {
     background-color: $yellow;
 }
-
-.bg-red {
-    background-color: $red;
-}
-
 .text-gray {
     color: $gray;
 }
@@ -97,10 +81,6 @@ ul.list-inline{
     color: $white;
 }
 
-.text-pink {
-    color: $pink;
-}
-
 
 /********字体***********/
 
@@ -109,7 +89,7 @@ ul.list-inline{
 }
 
 .text-normal {
-    font-size: $base-size;
+    font-size:pxTorem(26);
 }
 
 .text-large {
@@ -131,8 +111,7 @@ ul.list-inline{
     padding:0;
     height: pxTorem(50);
     line-height: pxTorem(50);
-    border-width: 1px;
-    border-style: solid;
+    border:0;
     border-radius: pxTorem(10);
     font-size: pxTorem(30);
 }
@@ -146,43 +125,10 @@ ul.list-inline{
     line-height: pxTorem(80);
 }
 
-.btn-default {
-    background-color: $white;
-    border-color: $black;
-}
-
-.btn-failed {
-    background-color: $gray;
-    border-color: $black;
-}
-
-.btn-blue {
-    background-color: $blue;
-    border-color: $blue;
-    color: $white;
-}
-
 .btn-red {
     background-color: $red;
     border-color: $red;
     color: $white;
-}
-
-.btn-pink {
-    background-color: $pink;
-    border-color: $pink;
-    color: $white;
-}
-
-.btn-yellow {
-    background-color: $yellow;
-    border-color: $yellow;
-}
-
-.btn-pink-hollow {
-    background-color: $white;
-    border-color: $pink;
-    color: $pink;
 }
 .swiper-pagination-bullet {
     padding: pxTorem(6);
@@ -192,7 +138,6 @@ ul.list-inline{
     opacity: 1 !important;
 }
 .swiper-pagination-bullet-active {
-    background-color: $gray-light !important;
+    background-color: $sliver !important;
 
 }
-
