--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -3,22 +3,14 @@
 }
 
 /******中性色********/
-$black:#000;
-$gray-light:#c8c8c8;
+$black:#333;
+$gray-light:#f3f3f3;
 $sliver:#a3a3a3;
 $gray:#666666;
 $white:#ffffff;
-
 /********基础色*********/
-
 $red:#de443b;
 $pink:#f06870;
 $yellow:#feca5e;
 $green:#79cabc;
 $blue:#20a0ff;
-
-/*******基础值*********/
-
-$gap:pxTorem(5);
-$panel-gap:$gap*2;
-$base-size:pxTorem(26);
