轮播样式，兑换按钮对齐

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -138,6 +138,6 @@ ul.list-inline{
     opacity: 1 !important;
 }
 .swiper-pagination-bullet-active {
-    background-color: $sliver !important;
+    background-color: rgba(0,0,0,.5) !important;
 
 }
