--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,16 +1,15 @@
-
 html, body {
     height: 100%;
     width: 100%;
     border: 0;
-    font-family: 'Microsoft Yahei';
+    font-family: 'PingFangSc-Light','Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
     line-height: 1.5;
     margin: 0;
     padding: 0;
     font-size:pxTorem(26);
 }
 input,textarea{
-    font-family: 'Microsoft Yahei';
+    font-family: 'PingFangSc-Light','Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
 }
 
 div, span, object, iframe, img, table, caption, thead, tbody,
