--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -10,7 +10,7 @@ $gray:#666666;
 $white:#ffffff;
 /********基础色*********/
 $red:#de443b;
-$pink:#f06870;
+$pink:#f86e6e;
 $yellow:#feca5e;
 $green:#79cabc;
 $blue:#20a0ff;
