--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
 }
+
 .pull-left {
     float: left;
 }
@@ -34,21 +35,24 @@
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
 }
-ul.list-inline{
+
+ul.list-inline {
     list-style: none;
     overflow: hidden;
-    _zoom:1;
-    li{
+    _zoom: 1;
+    li {
         list-style: none;
-        float:left;
+        float: left;
     }
 }
 
-
+img.img-responsive {
+    width: 100%;
+    height: 100%;
+}
 
 
 /************颜色********/
-
 
 .bg-white {
     background-color: $white;
@@ -65,6 +69,7 @@ ul.list-inline{
 .bg-yellow {
     background-color: $yellow;
 }
+
 .text-gray {
     color: $gray;
 }
@@ -89,7 +94,7 @@ ul.list-inline{
 }
 
 .text-normal {
-    font-size:pxTorem(26);
+    font-size: pxTorem(26);
 }
 
 .text-large {
@@ -108,10 +113,10 @@ ul.list-inline{
 /*******按钮**********/
 
 .btn {
-    padding:0;
+    padding: 0;
     height: pxTorem(50);
     line-height: pxTorem(50);
-    border:0;
+    border: 0;
     border-radius: pxTorem(10);
     font-size: pxTorem(30);
 }
@@ -129,15 +134,7 @@ ul.list-inline{
     background-color: $red;
     border-color: $red;
     color: $white;
-}
-.swiper-pagination-bullet {
-    padding: pxTorem(6);
-    margin: 0 pxTorem(8) !important;
-    border-radius: 50%;
-    background-color: $white !important;
-    opacity: 1 !important;
-}
-.swiper-pagination-bullet-active {
-    background-color: rgba(0,0,0,.5) !important;
-
+    &:active {
+        background-color: darken($red, 10%);
+    }
 }
