--- a/src/assets/scss/transition.scss
+++ b/src/assets/scss/transition.scss
@@ -1,28 +1,45 @@
 .fade-enter-active,
 .fade-leave-active {
-    transition: opacity .3s;
-    -ms-transition: opacity .3s;
-    -moz-transition: opacity .3s;
-    -webkit-transition: opacity .3s;
-    -o-transition: opacity .3s;
+    transition: opacity .2s;
+    -webkit-transition: opacity .2s;
+    -moz-transition: opacity .2s;
+    -ms-transition: opacity .2s;
 }
 
-.fade-enter {
-    opacity: 0
+.fade-enter,
+.fade-leave-active {
+    opacity: 0;
+    -webkit-opacity: 0;
+    -moz-opacity: 0;
+    -ms-opacity: 0;
+}
+
+.scale-enter-active {
+    transition: transform 0.2s;
+    -webkit-transition: transform 0.2s;
+    -moz-transition: transform 0.2s;
+    -ms-transition: transform 0.2s;
+}
+
+.scale-enter {
+    transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
 }
 
 .popup-enter-active,
 .popup-leave-active {
     transition: transform .5s;
-    -moz-transition: transform .5s;
     -webkit-transition: transform .5s;
-    -o-transition: transform .5s;
+    -moz-transition: transform .5s;
+    -ms-transition: transform .5s;
 }
 
 .popup-enter,
 .popup-leave-active {
     transform: translateY(100%);
-    -moz-transform: translateY(100%);
     -webkit-transform: translateY(100%);
-    -o-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -ms-transform: translateY(100%);
 }
