修复 转盘bug 刮刮卡bug 摇一摇bug

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -3,7 +3,7 @@ body {
     height: 100%;
     width: 100%;
     border: 0;
-    font-family: 'PingFangSc-Light', 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'PingFangSc-Light', 'Source Sans Pro', 'Helvetica Neue', 'Microsoft Yahei',Arial, sans-serif;
     line-height: 1.5;
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body {
 
 input,
 textarea {
-    font-family: 'PingFangSc-Light', 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+    font-family: 'PingFangSc-Light', 'Source Sans Pro', 'Helvetica Neue','Microsoft Yahei' ,Arial, sans-serif;
 }
 
 div,
