UI修正 订单列表状态保存

--- a/src/assets/scss/iconfont.css
+++ b/src/assets/scss/iconfont.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 117685 */
-  src: url('//at.alicdn.com/t/font_zwdisfcr2dfgvi.eot');
-  src: url('//at.alicdn.com/t/font_zwdisfcr2dfgvi.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_zwdisfcr2dfgvi.woff') format('woff'),
-  url('//at.alicdn.com/t/font_zwdisfcr2dfgvi.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_zwdisfcr2dfgvi.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.eot');
+  src: url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.woff') format('woff'),
+  url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.svg#iconfont') format('svg');
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -17,13 +17,13 @@
 
 .icon-drag-up:before{ content:"\e61d"; }
 
-.icon-money:before{ content:"\e62e"; }
+.icon-money:before{ content:"\e654"; }
 
-.icon-product:before{ content:"\e61e"; }
+.icon-product:before{ content:"\e635"; }
 
-.icon-check-in:before{ content:"\e689"; }
+.icon-check-in:before{ content:"\e636"; }
 
-.icon-order-unsolved:before{ content:"\e637"; }
+.icon-order-unsolved:before{ content:"\e60c"; }
 
 .icon-share:before{ content:"\e67e"; }
 
