--- a/src/assets/scss/vSwipe.scss
+++ b/src/assets/scss/vSwipe.scss
@@ -1,3 +1,5 @@
+@import './variable.scss';
+
 .mint-swipe,
 .mint-swipe-items-wrap {
     overflow: hidden;
@@ -22,22 +24,24 @@
 
 .mint-swipe-indicators {
     position: absolute;
-    bottom: 10px;
+    bottom: pxTorem(20);
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
 }
 
 .mint-swipe-indicator {
-    width: 8px;
-    height: 8px;
+    width:0.2rem;
+    height:0.2rem;
     display: inline-block;
-    border-radius: 100%;
-    margin: 0 3px;
-    background-color: #fff;
+    border-radius: 50%;
+    margin: 0 pxTorem(8);
+    /*background-color: #fff;*/
+    background-color: rgba(255, 255, 255, .73);
     opacity: 1;
 }
 
 .mint-swipe-indicator.is-active {
-    background-color: rgba(0, 0, 0, .5);
+    /*background-color: rgba(0, 0, 0, .5);*/
+    background-color: #fff;
 }
