--- a/src/assets/scss/vSwipe.scss
+++ b/src/assets/scss/vSwipe.scss
@@ -31,8 +31,8 @@
 }
 
 .mint-swipe-indicator {
-    width:0.2rem;
-    height:0.2rem;
+    width:8px;
+    height:8px;
     display: inline-block;
     border-radius: 50%;
     margin: 0 pxTorem(8);
