--- a/src/assets/scss/simditor.css
+++ b/src/assets/scss/simditor.css
@@ -284,7 +284,6 @@
   width: 2.875em;
   height: 2.5em;
   outline: none;
-  color: #333333;
   font-size: 0.9375em;
   line-height: 2.5em;
   vertical-align: middle;
@@ -387,30 +386,24 @@
   line-height: 2em;
   padding: 0 0.625em;
   text-decoration: none;
-  color: #666666;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .menu-item:hover {
   background: #f6f6f6;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .menu-item.menu-item-h1 {
   font-size: 1.5em;
-  color: #333333;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .menu-item.menu-item-h2 {
   font-size: 1.375em;
-  color: #333333;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .menu-item.menu-item-h3 {
   font-size: 1.25em;
-  color: #333333;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .menu-item.menu-item-h4 {
   font-size: 1.125em;
-  color: #333333;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .menu-item.menu-item-h5 {
   font-size: 1em;
-  color: #333333;
 }
 .simditor .simditor-toolbar .toolbar-menu ul > li .separator {
   display: block;
@@ -444,7 +437,6 @@
   opacity: 0.8;
 }
 .simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color.font-color-default {
-  background: #333333;
 }
 .simditor .simditor-toolbar .toolbar-menu.toolbar-menu-color .color-list li .font-color-1 {
   background: #E33737;
@@ -556,7 +548,6 @@
 .simditor .simditor-popover.link-popover .btn-unlink, .simditor .simditor-popover.image-popover .btn-upload, .simditor .simditor-popover.image-popover .btn-restore {
   display: inline-block;
   margin: 0 0 0 0.3125em;
-  color: #333333;
   font-size: 0.875em;
   outline: 0;
 }
@@ -589,9 +580,8 @@
 
 .simditor .simditor-body, .editor-style {
   font-size: 1em;
-  font-family: Microsoft Yahei,arial, sans-serif;
+  font-family: 'PingFangSc-Light', 'Source Sans Pro', 'Helvetica Neue', 'Microsoft Yahei',Arial, sans-serif;
   line-height: 1.6;
-  color: #333;
   outline: none;
   word-wrap: break-word;
 }
@@ -641,7 +631,6 @@
 .simditor .simditor-body p, .simditor .simditor-body div, .editor-style p, .editor-style div {
   word-wrap: break-word;
   margin: 0 0 0 0;
-  color: #333;
   word-wrap: break-word;
 }
 .simditor .simditor-body b, .simditor .simditor-body strong, .editor-style b, .editor-style strong {
