--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,7 +1,3 @@
-#app {
-    height: 100%;
-    width: 100%;
-}
 
 .pull-left {
     float: left;
@@ -55,5 +51,13 @@ img.img-responsive {
     color: $white;
     &:active {
         background-color: darken($red, 10%);
+    }
+}
+.btn-orange {
+    background-color: $orange;
+    border-color: $orange;
+    color: $white;
+    &:active {
+        background-color: darken($orange, 10%);
     }
 }
