--- a/src/assets/scss/iconfont.css
+++ b/src/assets/scss/iconfont.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 117685 */
-  src: url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.eot');
-  src: url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.woff') format('woff'),
-  url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_p8ke8okvlun89f6r.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_3pefu3hvksqhncdi.eot');
+  src: url('//at.alicdn.com/t/font_3pefu3hvksqhncdi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_3pefu3hvksqhncdi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_3pefu3hvksqhncdi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_3pefu3hvksqhncdi.svg#iconfont') format('svg');
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -14,6 +14,8 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-close-circle:before{ content:"\e724"; }
 
 .icon-drag-up:before{ content:"\e61d"; }
 
@@ -83,4 +85,4 @@
 
 .icon-car:before { content: "\e61b"; }
 
-.icon-plus-circle:before { content: "\e61a"; }
+.icon-plus-circle:before { content: "\e728"; }
