--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -2,11 +2,11 @@
     @return $px /75 * 1rem;
 }
 $black:#333;
-$gray-light:#f3f3f3;
+$gray-light:#f2f3f4;
 $sliver:#a3a3a3;
 $gray:#666666;
 $white:#ffffff;
-
+$orange:#ff5000;;
 $red:#de443b;
 $pink:#f86e6e;
 $yellow:#feca5e;
