--- a/src/assets/scss/transition.scss
+++ b/src/assets/scss/transition.scss
@@ -31,3 +31,29 @@
     transform: translateY(100%);
     -webkit-transform: translateY(100%);
 }
+
+.rotate-leave-active {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    transition: 1s cubic-bezier(0.5, 1, 0.5, 1.3);
+    -webkit-transition: 1s cubic-bezier(0.5, 1, 0.5, 1.3);
+}
+
+.rotate-enter {
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+}
+
+.rotate-enter-active {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transition: 1s cubic-bezier(0.5, 1, 0.5, 1.3);
+    -webkit-transition: 1s cubic-bezier(0.5, 1, 0.5, 1.3);
+}
+
+.rotate-enter-to {
+    transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
+}
