--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -17,8 +17,7 @@ textarea {
 }
 
 input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
+textarea:-webkit-autofill {
     background: none;
 }
 
