--- a/src/assets/scss/transition.scss
+++ b/src/assets/scss/transition.scss
@@ -28,8 +28,8 @@
 
 .popup-enter,
 .popup-leave-active {
-    transform: translateY(100%);
-    -webkit-transform: translateY(100%);
+    transform:translate3d(0,100%,0); 
+    -webkit-transform:translate3d(0,100%,0); 
 }
 
 .rotate-leave-active {
