--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -13,13 +13,15 @@ body {
 
 input,
 textarea {
+    background: none;
+    -webkit-appearance:none;  
     font-family: 'PingFangSc-Light', 'Source Sans Pro', 'Helvetica Neue', 'Microsoft Yahei', Arial, sans-serif;
 }
+input[type=date] {  
+    background-color:transparent;  
+    filter: alpha(opacity=0); /*androd*/  
+} 
 
-input:-webkit-autofill,
-textarea:-webkit-autofill {
-    background: none;
-}
 
 div,
 span,
@@ -125,10 +127,6 @@ table {
 }
 
 
-/*li{
-    list-style: none;
-}*/
-
 a,
 a:link,
 a:visited {
@@ -155,15 +153,9 @@ img {
 
 textarea {
     resize: none;
-    -webkit-appearance: none;
-}
-
-input {
-    -webkit-appearance: none;
 }
 
 select {
-    -webkit-appearance: none;
     background-color: $white;
 }
 
