--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-
+    <style>
+        #app,
+        .index .icon-list li,
+        .v-confirm-content .msg,
+        .order-list .tabs li,
+        .v-address-select .select-address,
+        .v-address-edit .edit-address,
+        .v-modal .v-warn-content,
+        .earn-integral .circle,
+        .earn-integral .check-item,
+        .earn-integral .notice,
+        .v-order .describe {
+            flex-direction: column;
+            -webkit-flex-direction: column;
+        }
+      
+    </style>
 </head>
 
 <body>
