专题副标题 积分任务提示语 我的账户文字居中

--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,8 @@
         .earn-integral .circle,
         .earn-integral .check-item,
         .earn-integral .notice,
-        .v-order .describe {
+        .v-order .describe,
+        .my-account .header .message {
             flex-direction: column;
             -webkit-flex-direction: column;
         }
