用户积分明细页面改

--- a/template/index.html
+++ b/template/index.html
@@ -17,7 +17,7 @@
         .earn-integral .check-item,
         .earn-integral .notice,
         .v-order .describe,
-        .my-account .header .message {
+        .my-account .header{
             flex-direction: column;
             -webkit-flex-direction: column;
         }
