--- a/template/index.html
+++ b/template/index.html
@@ -13,15 +13,15 @@
         .v-address-select .select-address,
         .v-address-edit .edit-address,
         .v-modal .v-warn-content,
-        .earn-integral .circle,
+        .earn-integral .circle-button .circle,
         .earn-integral .check-item,
         .earn-integral .notice,
         .v-order .describe,
-        .my-account .header{
+        .v-warn-content,
+        .my-account .header {
             flex-direction: column;
             -webkit-flex-direction: column;
         }
-      
     </style>
 </head>
 
