--- a/template/index.html
+++ b/template/index.html
@@ -19,7 +19,8 @@
         .v-order .describe,
         .v-warn-content,
         .my-account .header,
-        .product-detail .title {
+        .product-detail .title,
+        .v-treasure .integral-message {
             flex-direction: column;
             -webkit-flex-direction: column;
         }
