--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -156,6 +156,7 @@ img {
 * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 textarea {
