--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,7 @@
     <style>
         #app,
         .index .icon-list li,
+        .subject .right,
         .v-confirm-content .msg,
         .order-list .tabs li,
         .v-address-select .select-address,
