--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -11,5 +11,47 @@ $blue:#20a0ff;
 @function pxTorem($px) {
     @return $px /75 * 1rem;
 }
-@import './mixin.scss';
-@import './flexbox.scss';
+
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@mixin flex-center-h {
+    display: flex;
+    justify-content: center;
+}
+
+@mixin flex-center-v {
+    display: flex;
+    align-items: center;
+}
+
+@mixin clearfix {
+    overflow: hidden;
+    _zoom: 1;
+}
+
+@mixin text-ellipsis($line:1) {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: $line;
+    -webkit-box-orient: vertical;
+}
+
+@mixin list-inline {
+    @include clearfix;
+    list-style: none;
+    li {
+        list-style: none;
+        float: left;
+    }
+}
+
+@mixin active($color:$white, $value:2%) {
+    &:active {
+        background-color: darken($color, $value);
+    }
+}
