--- a/template/index.html
+++ b/template/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang='zh'>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no'>
+    <meta name='format-detection' content='telephone=no'>
 </head>
 
 <body>
-    <div id="app"></div>
-    <script src="http://m.goldmiao.com/yngame/air.min.1.0.0.js"></script>
+    <div id='app'></div>
+    <script src='http://m.goldmiao.com/yngame/air.min.1.0.1.js'></script>
 </body>
 
 </html>
