--- a/template/index.html
+++ b/template/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <div id='app'></div>
+    <script>
+        document.documentElement.style.fontSize = document.documentElement.clientWidth / 10 + 'px';
+    </script>
     <script src='http://m.goldmiao.com/yngame/air.min.1.0.1.js'></script>
 </body>
 
