--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -51,3 +51,11 @@ img.img-responsive {
 .enlarge-enter {
     transform: scale(0.5); // top: pxTorem(-675);
 }
+
+.swiper-pagination-bullet {
+    opacity: 1 !important;
+    background-color: rgba(255, 255, 255, .5) !important;
+    &.swiper-pagination-bullet-active {
+        background-color: $white !important;
+    }
+}
