--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -52,6 +52,15 @@ img.img-responsive {
     transform: scale(0.5); // top: pxTorem(-675);
 }
 
+.slide-fade-enter-active {
+    transition: all .3s ease;
+}
+
+.slide-fade-enter {
+    transform: translateY(10px);
+    opacity: 0;
+}
+
 .swiper-pagination-bullet {
     opacity: 1 !important;
     background-color: rgba(255, 255, 255, .5) !important;
