--- a/src/components/vSimditor/style/simditor.css
+++ b/src/components/vSimditor/style/simditor.css
@@ -733,6 +733,5 @@
 .simditor .simditor-body img, .editor-style img {
   display: block;
   width:100%;
-  height:100%;
-  margin: 0 auto;
+  height:auto;
 }
