--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -28,7 +28,7 @@ a,
 button,
 input {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-user-modify: read-write-plaintext-only;
+    -webkit-user-modify:read-only;
 }
 
 div,
@@ -135,8 +135,7 @@ table {
 }
 
 a,
-a:link,
-a:visited {
+{
     color: #333;
     text-decoration: none;
 }
@@ -156,7 +155,6 @@ img {
 * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 textarea {
