活动样式调整

--- a/src/views/activityDetail/components/machine/style.scss
+++ b/src/views/activityDetail/components/machine/style.scss
@@ -1,13 +1,12 @@
  @import '../../../../assets/scss/variable.scss';
  .v-machine {
      position: relative;
-     min-height: pxTorem(1250);
-     padding-bottom: pxTorem(84);
      background-color: #64acff;
      ul,
      li {
          list-style: none;
      }
+     overflow: hidden;
  }
 
  .header {
