--- a/src/views/activityDetail/components/fortune/style.scss
+++ b/src/views/activityDetail/components/fortune/style.scss
@@ -1,7 +1,8 @@
   @import '../../../../assets/scss/variable.scss';
   .fortune {
-      min-height: pxTorem(1250);
-      padding-bottom: pxTorem(84);
+      //   min-height: pxTorem(1250);
+      //   padding-bottom: pxTorem(84);
+      overflow: hidden;
       background-color: #fdf860;
       background-size: pxTorem(750) pxTorem(1380);
       background-position: pxTorem(0) pxTorem(400);
