--- a/src/views/activityDetail/components/quiz/style.scss
+++ b/src/views/activityDetail/components/quiz/style.scss
@@ -1,7 +1,8 @@
     @import '../../../../assets/scss/variable.scss';
     .v-quiz {
-        min-height: pxTorem(1250);
-        padding-bottom: pxTorem(84);
+        // min-height: pxTorem(1250);
+        // padding-bottom: pxTorem(84);
+        overflow: hidden;
         background-image: url('./images/quizBackground.png');
         background-size: pxTorem(750) pxTorem(15);
     }
