--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,minimal-ui,user-scalable=no'>
-    <meta name='format-detection' content='telephone=no'>
+    <!-- <meta name='format-detection' content='telephone=no'> -->
     <link rel='stylesheet' href='http://at.alicdn.com/t/font_mljz7o9gx6c1sjor.css'>
 </head>
 <body>
